--- a/frontend/src/stylus/perks.styl
+++ b/frontend/src/stylus/perks.styl
@@ -9,15 +9,14 @@
 			text
 				fill #ebdbb2
 
-	.node rect
-		fill-opacity .9
-		shape-rendering crispEdges
-		cursor pointer
-
-	.node text
-		pointer-events none
-		text-shadow 0 1px 0 #fff
-		fill white
+	.node
+		rect
+			fill-opacity .9
+			shape-rendering crispEdges
+			cursor pointer
+		text
+			pointer-events none
+			fill white
 
 	.link
 		fill none
