--- a/frontend/src/stylus/perks.styl
+++ b/frontend/src/stylus/perks.styl
@@ -1,7 +1,12 @@
 .perktree
+	height 100%
+
+	.layout, .flex
+		height 100%
+
 	.v-card
 		padding 1rem
-		height 42rem
+		height 100%
 
 		#perktree
 			height 100%
